# datacat

./: .gitignore  README.md  pyproject.toml
examples/: datacat-glob.yaml  datacat-json.yaml  datacat-ndjson.yaml  datacat-nulltimestamp.yaml  datacat-original.yaml  datacat-parquet.yaml  datacat.yaml
src/datacat/: conductor.py  config.py  helpers.py  main.py  serializer.py  sink.py  source.py  timestamper.py  typing.py
